# cpp-backend-template-practicum-november

.github/workflows/: main.yml
sprint1/: README.md
sprint1/problems/async_server/precode/src/: http_server.cpp
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/precode/src/: cafeteria.h
sprint1/problems/cafeteria/solution/: CMakeLists_alternative.txt  README.md
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h  sync_write_ostream_adapter.h
sprint1/problems/map_json/solution/: CMakeLists.txt  README.md
sprint1/problems/map_json/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  request_handler.h  tagged.h
sprint1/problems/radio/precode/: CMakeLists.txt
sprint1/problems/radio/precode/src/: main.cpp
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/game_state/solution/src/: logging.h  request_handler.cpp  request_handler.h
sprint2/problems/game_state/solution/src/application/: game.h  players.h
sprint2/problems/game_state/solution/src/model/: dog.h  game_session.h  map.h  position.h
sprint2/problems/game_state/solution/src/util/: tagged.h
sprint2/problems/join_game/solution/: CMakeLists.txt  conanfile.txt
sprint2/problems/join_game/solution/src/: http_server.cpp  http_server.h  logging.cpp  logging.h  main.cpp  request_handler.cpp
sprint2/problems/logger/precode/: my_logger.h
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/move_players/solution/: Dockerfile  conanfile.txt
sprint2/problems/move_players/solution/src/: http_server.h  main.cpp  request_handler.cpp
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  logging.cpp  logging.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt  conanfile.txt
sprint2/problems/static_content/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tagged.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: game.h  http_server.cpp  logging.cpp  (+2 more)
sprint3/problems/: TESTING_FRAMEWORKS.txt
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: api_handler.cpp  api_handler.h  endpoint.h  json_loader.cpp  loot_generator.cpp  loot_generator.h  model.cpp  model.h  player.cpp  player.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/hjk/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/htmldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/instrumentation/precode/: gmon.out  report
sprint3/problems/instrumentation/solution/: report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/data/: config.json
sprint3/problems/static_lib/solution/src/: api_handler.cpp  api_handler.h  boost_json.cpp  endpoint.cpp  endpoint.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  player.cpp  player.h  request_handler.cpp  request_handler.h  sdk.h  tagged.h
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt  conanfile.txt  urldecode.cpp  urldecode.h
sprint3/problems/urlencode/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt  run_test_wsl.sh  state  test_kill_temp.py
sprint4/problems/leave_game/solution/src/: api_handler.cpp  api_handler.h  collision_detector.cpp  collision_detector.h  conn_pull.h  connection_pool.h  database.cpp  database.h  endpoint.cpp  endpoint.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger.h  loot_generator.cpp  main.cpp  model.cpp  model.h  model_serialization.h  player.cpp  player.h  request_handler.cpp  request_handler.h  serialization.cpp  state_saver.h  ticker.h
sprint4/problems/solution/: CMakeLists.txt
sprint4/problems/solution/src/: api_handler.cpp  api_handler.h  collision_detector.h  endpoint.h  json_loader.cpp  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  player.h  request_handler.h  serialization.cpp  serialization.h  state_saver.h
sprint4/problems/solution/tests/: collision-detector-tests.cpp
sprint4/problems/state_serialization/precode/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/precode/src/: main.cpp  model_serialization.h
sprint4/problems/state_serialization/precode/src/app/: application_listener.h
sprint4/problems/state_serialization/precode/src/infrastructure/: serializing_listener.cpp
sprint4/problems/state_serialization/solution/: find_and_run_test.sh  run_test_wsl.sh
(+126 files in other folders)
